--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <button class="accordion-button">Buổi học 2</button>
         <div class="accordion-content">
             <ul>
-                <li><a href="src/pages/blog/blog.html" >Cách làm TodoList bằng HTML, JS, CSS</a></li>
-                <li><a href="src/pages/index/index.html" >Bài thơ Nguyên tiêu</a></li>
-                <li><a href="src/pages/intro/intro.html" >Giới thiệu bản thân</a></li>
-                <li><a href="src/pages/news/news.html" >Phân tích bài thơ Nguyên tiêu</a></li>
+                <li><a href="BTNV2/src/pages/blog/blog.html" >Cách làm TodoList bằng HTML, JS, CSS</a></li>
+                <li><a href="BTNV2/src/pages/index/index.html" >Bài thơ Nguyên tiêu</a></li>
+                <li><a href="BTNV2/src/pages/intro/intro.html" >Giới thiệu bản thân</a></li>
+                <li><a href="BTNV2/src/pages/news/news.html" >Phân tích bài thơ Nguyên tiêu</a></li>
             </ul>
         </div>
     </div>
