Bai tap ve nha buoi 3, sua file index.html

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 <body>
 
     <h1>Danh sách buổi học</h1>
-
-    <!-- Thẻ chứa số thứ tự buổi học -->
     <div class="accordion">
         <button class="accordion-button">Buổi học 1</button>
         <div class="accordion-content">
@@ -28,7 +26,12 @@
             </ul>
         </div>
     </div>
-
+    <div class="accordion">
+        <button class="accordion-button">Buổi học 3</button>
+        <div class="accordion-content">
+            <a href="BTVN3/src/pages/blog/blog.html"></a>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
