update giao dien chinh bang css va js

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <div class="accordion">
         <button class="accordion-button">Buổi học 3</button>
         <div class="accordion-content">
-            <a href="BTVN3/src/pages/blog/blog.html"></a>
+            <ul>
+                <li><a href="BTVN3/src/pages/blog/blog.html">How 60 Minutes a Day Can Change Your Life</a></li>
+            </ul>
         </div>
     </div>
     <script src="script.js"></script>
