BTVN buoi 4 - bai 1

--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
             </ul>
         </div>
     </div>
+    <div class="accordion">
+        <button class="accordion-button">Buổi học 4</button>
+        <div class="accordion-content">
+            <ul>
+                <li><a href="BTVN4/src/pages/cv/cv.html">Trang CV</a></li>
+            </ul>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
