BTVN buoi 4 - bai 2 va bai 3

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <div class="accordion-content">
             <ul>
                 <li><a href="BTVN4/src/pages/cv/cv.html">Trang CV</a></li>
+                <li><a href="BTVN4/src/pages/menu/menu.html">Trang Menu</a></li>
             </ul>
         </div>
     </div>
