--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <ul>
                 <li><a href="BTVN4/src/pages/cv/cv.html">Trang CV</a></li>
                 <li><a href="BTVN4/src/pages/menu/menu.html">Trang Menu</a></li>
+                <li><a href="BTVN4/src/pages/form/form.html"></a></li>
             </ul>
         </div>
     </div>
