--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
             </ul>
         </div>
     </div>
+    <div class="accordion">
+        <button class="accordion-button">Buổi học 7</button>
+        <div class="accordion-content">
+            <ul>
+                <li><a href="f8-zoom-day-7/scholars/courses.html">COURSES</a></li>
+                <li><a href="f8-zoom-day-7/scholars/shop.html">SHOP</a></li>
+            </ul>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
