--- a/f8-zoom-day-7/scholars/courses.html
+++ b/f8-zoom-day-7/scholars/courses.html
@@ -231,6 +231,9 @@
                         </li>
                         <!-- card 2 -->
                         <li class="card__item--container">
+                            <div class="flash">
+                                <i class="fa-solid fa-bolt-lightning"></i>
+                            </div>
                             <div class="card__item--img">
                                 <img src="https://themazine.com/html/scholars-lms/images/course/8.jpg" alt="Course 1">
                             </div>
@@ -300,6 +303,9 @@
                         </li>
                         <!-- card 5 -->
                         <li class="card__item--container">
+                            <div class="flash">
+                                <i class="fa-solid fa-bolt-lightning"></i>
+                            </div>
                             <div class="card__item--img">
                                 <img src="https://themazine.com/html/scholars-lms/images/course/8.jpg" alt="Course 1">
                             </div>
@@ -369,6 +375,9 @@
                         </li>
                         <!-- card 8 -->
                         <li class="card__item--container">
+                            <div class="flash">
+                                <i class="fa-solid fa-bolt-lightning"></i>
+                            </div>
                             <div class="card__item--img">
                                 <img src="https://themazine.com/html/scholars-lms/images/course/8.jpg" alt="Course 1">
                             </div>
